# Architecture-in-c

./: CMakeLists.txt  ComandosCompilarProyecto.txt  README.md
fluid/: CMakeLists.txt  fluid.cpp
ftest/: CMakeLists.txt  ftest.cpp
sim/: CMakeLists.txt  block.cpp  block.hpp  constants.hpp  grid.cpp  grid.hpp  particle.cpp  particle.hpp  progargs.cpp  progargs.hpp  simulation.cpp  simulation.hpp  utils.cpp  utils.hpp
utest/: CMakeLists.txt  block_test.cpp  grid_test.cpp  particle_test.cpp  progargs_test.cpp  simulation_test.cpp  utils_test.cpp
